--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,8 @@ body{
     justify-content: center;
     min-height: 100vh;
     text-align: center;
-    background: linear-gradient(to bottom, #ccfdff 0%, #ffffff 100%);
-    background-repeat: no-repeat, no-repeat;
-   background-position: right, left; 
+    background: linear-gradient(to bottom, #dfdfdf 0%, #ffffff 100%);
+  
 }
 h1{
     padding: 0;
@@ -20,8 +19,9 @@ h1{
     border-bottom: 1px solid rgb(228, 228, 228);
 
 }
+
 .name{
-    color: rgb(84, 80, 138);
+    color: rgb(104, 104, 104);
 }
 .big{
     font-size: 2em;
@@ -43,7 +43,7 @@ select{
     padding: 0 5px ;
 }
 .colored{
-    color: rgb(88, 105, 255);
+    color: rgb(122, 122, 122);
 }
 
 .box{
@@ -52,4 +52,9 @@ select{
     background-color: rgb(255, 255, 255);
     border-radius: 10px;
     box-shadow: 3px 3px 5px rgb(223, 223, 223);
+    margin: 0 10px;
+}
+
+p{
+    color: rgb(165, 165, 165);
 }
